force-app/main/default/objects/Checklist__c/fields/Attorney_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Legacy)Attorney Assignment</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>Checklist (Attorney Assignment)</relationshipLabel>
    <relationshipName>Checklist1</relationshipName>
    <type>Lookup</type>
</CustomField>