force-app/main/default/objects/Checklist__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Legacy)Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>