force-app/main/default/objects/Checklist__c/fields/Checklist_Code__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Code__c</fullName>
    <label>Checklist Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>