force-app/main/default/objects/Checklist__c/fields/Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Status__c</fullName>
    <label>(Legacy)Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Assignment Checklist In Progress</fullName>
            </value>
            <value>
                <fullName>Attorney Checklist In Progress</fullName>
            </value>
            <value>
                <fullName>Filing Documents with PTO</fullName>
            </value>
            <value>
                <fullName>Double Checking</fullName>
            </value>
            <value>
                <fullName>Double Checker Approved</fullName>
            </value>
            <value>
                <fullName>Modification In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>