force-app/main/default/objects/Checklist__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>BLANKVALUE(Patent__r.SymphonyLF__Client__c,
BLANKVALUE(Design__r.SymphonyLF__Client__c,
NULL
)
)</formula>
    <label>Client</label>
    <type>Text</type>
</CustomField>