force-app/main/default/objects/Checklist__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Legacy)Design</label>
    <referenceTo>SymphonyLF__Design__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>