force-app/main/default/objects/Checklist__c/fields/Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number__c</fullName>
    <formula>Patent__r.SymphonyLF__Docket_Number__c</formula>
    <label>(Legacy)Docket Number</label>
    <type>Text</type>
</CustomField>