force-app/main/default/objects/Checklist__c/fields/Docket_Number_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number_Hyperlink__c</fullName>
    <formula>Patent__r.SymphonyLF__Docket_Number_Hyperlink__c</formula>
    <label>(Legacy)Docket Number Hyperlink</label>
    <type>Text</type>
</CustomField>