force-app/main/default/objects/Checklist__c/fields/Double_Checker_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Double_Checker_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Legacy)Double Checker Assignment</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>Checklist (Double Checker Assignment)</relationshipLabel>
    <relationshipName>Checklist2</relationshipName>
    <type>Lookup</type>
</CustomField>