force-app/main/default/objects/Checklist__c/fields/Initial_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Legacy)Initial Assignment</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>