force-app/main/default/objects/Checklist__c/fields/Keyword_Association__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Legacy)Keyword Association</label>
    <referenceTo>SymphonyLF__Keyword_Association__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>