force-app/main/default/objects/Checklist__c/fields/Legal_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Legal_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Assistant</label>
    <type>Checkbox</type>
</CustomField>