force-app/main/default/objects/Checklist__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>(Legacy)Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>