force-app/main/default/objects/Checklist__c/fields/Paralegal__c.field-meta.xml
<CustomField>
    <fullName>Paralegal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paralegal</label>
    <type>Checkbox</type>
</CustomField>