force-app/main/default/objects/Checklist__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <formula>$User.ProfileName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Legacy)ProfileName</label>
    <type>Text</type>
</CustomField>