force-app/main/default/objects/Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checklist_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Paralegal__c</columns>
    <columns>Legal_Assistant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>